--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,10 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Miembros</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Contactos</a>
+        <a href="{{ site.github.zip_url }}" class="btn">Inicio</a>
+        <a href="{{ site.github.zip_url }}" class="btn">Caso Clínico</a>
+        <a href="{{ site.github.zip_url }}" class="btn">Entregables</a>
+        <a href="{{ site.github.tar_url }}" class="btn">Miembros</a>
       {% endif %}
     </header>
 
