--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <a href="{{ site.github.zip_url }}" class="btn">Inicio</a>
         <a href="{{ site.github.zip_url }}" class="btn">Caso Clínico</a>
         <a href="{{ site.github.zip_url }}" class="btn">Entregables</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Miembros</a>
+        <a href="/miembros/miembros.html" class="btn">Miembros</a>
       {% endif %}
     </header>
 
