--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,9 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Inicio</a>
-        <a href="{{ site.github.zip_url }}" class="btn">Caso Clínico</a>
-        <a href="{{ site.github.zip_url }}" class="btn">Entregables</a>
+        <a href="/inicio/inicio.html" class="btn">Inicio</a>
+        <a href="/casoclinico/casoclinico.html" class="btn">Caso Clínico</a>
+        <a href="/entregables/entregables.html" class="btn">Entregables</a>
         <a href="/miembros/miembros.html" class="btn">Miembros</a>
       {% endif %}
     </header>
