--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="/inicio/inicio.html" class="btn">Inicio</a>
+        <a href="https://grupo-3-biodesign.github.io/" class="btn">Inicio</a>
         <a href="/casoclinico/casoclinico.html" class="btn">Caso Clínico</a>
         <a href="/entregables/entregables.html" class="btn">Entregables</a>
         <a href="/miembros/miembros.html" class="btn">Miembros</a>
